Trying to fix issues with scrollbars affecting layout

--- a/src/less/components/app.less
+++ b/src/less/components/app.less
@@ -2,7 +2,6 @@
 	width: 450px;
 	height: 520px;
 	margin: 0 auto;
-	overflow: scroll;
 	position: relative;
 	background-color: @color-neutral-lighter;
 	color: @color-neutral-darker;
