--- a/src/less/components/site.less
+++ b/src/less/components/site.less
@@ -3,11 +3,13 @@
 	border-collapse: collapse;
 	color: @color-neutral-darker;
 	margin-bottom: .5em;
+	overflow: hidden;
 
 	tbody {
 		display: block;
 		max-height: 360px;
 		overflow-y: scroll;
+		margin-right: -16px;
 	}
 
 	th, td {
